--- a/src/Utilities/_variables.scss
+++ b/src/Utilities/_variables.scss
@@ -27,6 +27,7 @@ $darkModeText: #e0e7f0;
 $darkModeSubtext: #788ea8;
 $darkModeBG: url("../../Assets/Images/Dark-BG.jpg");
 $darkModeShadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
+$darkModeAvatarShadow: 0px 10px 15px rgba(41, 69, 122, 0.52);
 
 // Typography
 $sansSerifMain: "Roboto", sans-serif;
