--- a/src/Styles/ProfilePreview/ProfilePreview.css
+++ b/src/Styles/ProfilePreview/ProfilePreview.css
@@ -73,6 +73,26 @@
   font-size: 1em;
 }
 
+.profilepreview__modals {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 40;
+  -webkit-backdrop-filter: blur(24px);
+          backdrop-filter: blur(24px);
+}
+
 .light.profilepreview__container {
   background-color: rgba(255, 255, 255, 0.9);
 }
@@ -97,5 +117,9 @@
 .dark.profilepreview__container .profilepreview__user-info p,
 .dark.profilepreview__container .profilepreview__details p {
   color: #788ea8;
+}
+
+.dark.profilepreview__modals {
+  background-color: rgba(0, 0, 0, 0.237);
 }
 /*# sourceMappingURL=ProfilePreview.css.map */
