--- a/src/Styles/TweetPage/TweetPage.css
+++ b/src/Styles/TweetPage/TweetPage.css
@@ -4,7 +4,6 @@
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  background-image: url("../../Assets/Images/Light-BG-2.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -24,7 +23,23 @@
 
 .tweet-page__container .tweet-page__main .tweet-page__tweet-container {
   width: 55%;
-  -webkit-box-shadow: 0px 30px 30px rgba(138, 180, 211, 0.2);
-          box-shadow: 0px 30px 30px rgba(138, 180, 211, 0.2);
+}
+
+.light.tweet-page__container {
+  background-image: url("../../Assets/Images/Light-BG-2.jpg");
+}
+
+.light.tweet-page__container .tweet-page__tweet-container {
+  -webkit-box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+          box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+}
+
+.dark.tweet-page__container {
+  background-image: url("../../Assets/Images/Dark-BG.jpg");
+}
+
+.dark.tweet-page__container .tweet-page__tweet-container {
+  -webkit-box-shadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
+          box-shadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
 }
 /*# sourceMappingURL=TweetPage.css.map */
