--- a/src/Styles/FullTweet/FullTweet.scss
+++ b/src/Styles/FullTweet/FullTweet.scss
@@ -1,21 +1,75 @@
 @import "../../Utilities/variables";
 
+.fulltweet__enlarged-image {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    // padding: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(24px);
+    z-index: 60;
+
+    .fulltweet__enlarged-image-container {
+        position: relative;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .fulltweet__icon-bg {
+            position: absolute;
+            top: 5%;
+            left: 5%;
+            z-index: 65;
+            padding: 12px;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100px;
+            background-color: rgba(0, 0, 0, 0.4);
+            backdrop-filter: blur(16px);
+            transition: background-color 0.2s ease, transform 0.2s ease;
+
+            &:hover {
+                background-color: rgba(0, 0, 0, 0.6);
+                transform: scale(1.1);
+                cursor: pointer;
+            }
+
+            .fulltweet__icon {
+                color: white;
+            }
+        }
+
+        img {
+            max-height: 100%;
+            max-width: 100%;
+            position: relative;
+
+            .fulltweet__icon {
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+        }
+    }
+}
+
 .fulltweet__container {
     font-family: $sansSerifMain;
-    color: $lightModeGrey;
     //   padding: 36px;
     display: flex;
     flex-direction: column;
     gap: 12px;
-    background: $lightModeWhite50;
     backdrop-filter: blur(16px);
     // position: relative;
-
-    h3,
-    p,
-    .fulltweet__button {
-        color: $lightModeGrey;
-    }
 
     .fulltweet__reply-box {
         // position: absolute;
@@ -78,6 +132,10 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 
@@ -150,5 +208,31 @@
                 }
             }
         }
+    }
+}
+
+.light.fulltweet__container {
+    color: $lightModeGrey;
+    background: $lightModeWhite50;
+
+    h3,
+    p,
+    .fulltweet__button {
+        color: $lightModeGrey;
+    }
+}
+
+.dark.fulltweet__container {
+    color: $darkModeText;
+    background: $darkModeGrey;
+
+    h3,
+    .fulltweet__message p {
+        color: $darkModeText;
+    }
+
+    p,
+    .fulltweet__button {
+        color: $darkModeSubtext;
     }
 }
