--- a/src/Styles/TweetPage/TweetPage.scss
+++ b/src/Styles/TweetPage/TweetPage.scss
@@ -5,7 +5,6 @@
     // height: 100vh;
     min-height: 100vh;
     height: fit-content;
-    background-image: url("../../Assets/Images/Light-BG-2.jpg");
     background-position: center;
     background-size: cover;
 
@@ -21,9 +20,24 @@
 
         .tweet-page__tweet-container {
             width: 55%;
-            box-shadow: 0px 30px 30px $lightModeGrey20;
             // position: absolute;
             // margin-top: 10%;
         }
+    }
+}
+
+.light.tweet-page__container {
+    background-image: url("../../Assets/Images/Light-BG-2.jpg");
+
+    .tweet-page__tweet-container {
+        box-shadow: $lightModeShadow;
+    }
+}
+
+.dark.tweet-page__container {
+    background-image: url("../../Assets/Images/Dark-BG.jpg");
+
+    .tweet-page__tweet-container {
+        box-shadow: $darkModeShadow;
     }
 }
