--- a/src/Styles/FullTweet/FullTweet.scss
+++ b/src/Styles/FullTweet/FullTweet.scss
@@ -224,7 +224,7 @@
 
 .dark.fulltweet__container {
     color: $darkModeText;
-    background: $darkModeGrey;
+    background: $darkModeTweet;
 
     h3,
     .fulltweet__message p {
