--- a/src/Styles/Reply/Reply.css
+++ b/src/Styles/Reply/Reply.css
@@ -44,6 +44,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 6px;
+  width: 100%;
 }
 
 .reply__container .reply__details .reply__details-content .reply__details-user {
@@ -53,6 +54,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   gap: 16px;
 }
 
@@ -180,9 +184,14 @@
 .dark.reply__container {
   color: #e0e7f0;
   background: #0a1324;
+  border-bottom: 1px solid rgba(17, 29, 52, 0.5);
 }
 
 .dark.reply__container .reply__message p {
   color: #e0e7f0;
+}
+
+.dark.reply__container .reply__details-user p {
+  color: #788ea8;
 }
 /*# sourceMappingURL=Reply.css.map */
