--- a/src/Utilities/_variables.scss
+++ b/src/Utilities/_variables.scss
@@ -34,3 +34,9 @@ $sansSerifMain: "Roboto", sans-serif;
 
 // Spacing
 $homeGap: 32px;
+
+// Window sizes
+$desktop: 1366px;
+$tablet: 768px;
+$SMLtablet: 600px;
+$phone: 360px;
