--- a/src/Styles/ProfilePage/ProfilePage.scss
+++ b/src/Styles/ProfilePage/ProfilePage.scss
@@ -20,16 +20,18 @@
     position: relative;
 
     .profilepage__banner {
+        min-height: 300px;
         max-height: 550px;
         width: 100%;
         overflow: hidden;
-        object-fit: cover;
         object-position: center;
-        display: flex;
-        align-items: center;
+        // display: flex;
+        // align-items: center;
 
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
 
@@ -39,8 +41,13 @@
         padding: 0px 12.5%;
         height: 50px;
 
-        .profilepage__avatar {
+        .profilepage__avatar,
+        .profilepage__avatar-small {
             transform: translateY(-250%);
+        }
+
+        .profilepage__avatar-small {
+            display: none;
         }
 
         .profilepage__button-container {
@@ -69,8 +76,25 @@
 
     .profilepage__content {
         display: flex;
-        gap: $homeGap;
-        padding: 24px 12.5% 120px;
+        gap: 64px;
+        padding: 36px 12.5% 120px;
+    }
+
+    @media only screen and (max-width: $tablet) {
+        .profilepage__content {
+            padding: 72px 12.5% 120px;
+        }
+
+        .profilepage__avatar-button-container {
+            .profilepage__avatar-small {
+                display: block;
+                transform: translateY(-150%);
+            }
+
+            .profilepage__avatar {
+                display: none;
+            }
+        }
     }
 }
 
