--- a/src/Styles/Tweet/Tweet.css
+++ b/src/Styles/Tweet/Tweet.css
@@ -159,6 +159,18 @@
   cursor: pointer;
 }
 
+@media only screen and (max-width: 360px) {
+  .tweet__container h3,
+  .tweet__container p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .tweet__container .tweet__details .tweet__details-time {
+    display: none;
+  }
+}
+
 .light.tweet__container {
   background: rgba(255, 255, 255, 0.9);
   -webkit-box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
