--- a/src/Styles/UserPage/UserPage.css
+++ b/src/Styles/UserPage/UserPage.css
@@ -41,6 +41,8 @@
 .userpage__container .userpage__avatar-follow-container .userpage__avatar {
   width: 250px;
   height: 250px;
+  min-width: 250px;
+  min-height: 250px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   border-radius: 50%;
@@ -157,6 +159,78 @@
   margin-top: 0%;
 }
 
+@media only screen and (max-width: 1366px) {
+  .userpage__container .userpage__content {
+    padding: 36px 12.5% 120px;
+  }
+  .userpage__container .userpage__content .userpage__user-tweets {
+    width: 75%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .userpage__container .userpage__avatar-follow-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .userpage__container .userpage__avatar-follow-container .userpage__avatar {
+    width: 200px;
+    height: 200px;
+    min-width: 200px;
+    min-height: 200px;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .userpage__container .userpage__avatar-follow-container .userpage__follow-container {
+    margin-top: -48px;
+  }
+  .userpage__container .userpage__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 84px;
+  }
+  .userpage__container .userpage__content .userpage__content-stats,
+  .userpage__container .userpage__content .userpage__user-tweets,
+  .userpage__container .userpage__content hr {
+    width: 100%;
+  }
+  .userpage__container .userpage__content .userpage__content-stats {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .userpage__container .userpage__content .userpage__content-stats .profiledetails__user-profile {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .userpage__container .userpage__content .userpage__content-stats .profiledetails__details {
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .light.userpage__container {
   background-image: url("../../Assets/Images/Light-BG-2.jpg");
 }
@@ -181,7 +255,7 @@
 
 .dark.userpage__container hr {
   border: none;
-  width: 80%;
+  width: 100%;
   border-top: 1px solid #788ea8;
 }
 
