--- a/src/Styles/UserPage/UserPage.scss
+++ b/src/Styles/UserPage/UserPage.scss
@@ -31,6 +31,8 @@
         .userpage__avatar {
             width: 250px;
             height: 250px;
+            min-width: 250px;
+            min-height: 250px;
             transform: translateY(-50%);
             border-radius: 50%;
             overflow: hidden;
@@ -123,6 +125,61 @@
             margin-top: 0%;
         }
     }
+
+    @media only screen and (max-width: $desktop) {
+        .userpage__content {
+            padding: 36px 12.5% 120px;
+            .userpage__user-tweets {
+                width: 75%;
+            }
+        }
+    }
+
+    @media only screen and (max-width: $tablet) {
+        .userpage__avatar-follow-container {
+            flex-direction: column;
+            align-items: center;
+
+            .userpage__avatar {
+                width: 200px;
+                height: 200px;
+                min-width: 200px;
+                min-height: 200px;
+                transform: translateY(-50%);
+            }
+
+            .userpage__follow-container {
+                margin-top: -48px;
+            }
+        }
+        .userpage__content {
+            flex-direction: column;
+            margin-top: 84px;
+
+            .userpage__content-stats,
+            .userpage__user-tweets,
+            hr {
+                width: 100%;
+            }
+
+            .userpage__content-stats {
+                align-items: center;
+
+                .profiledetails__user-profile {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+
+                .profiledetails__details {
+                    width: 100%;
+                    flex-direction: row;
+                    justify-content: space-between;
+                }
+            }
+        }
+    }
 }
 
 .light.userpage__container {
@@ -148,7 +205,7 @@
 
     hr {
         border: none;
-        width: 80%;
+        width: 100%;
         border-top: 1px solid $darkModeSubtext;
     }
 
